--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,11 @@
-FROM python:3.10-buster
+FROM ubuntu:22.04
 
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE 1
+
+RUN apt-get update
+
+RUN apt-get install -y git python3 python3-pip
 
 WORKDIR /code
 
@@ -10,4 +14,4 @@ COPY requirements.txt .
 
 RUN pip install -r requirements.txt
 
-CMD ["python", "-m", "src"]
+CMD ["python3", "-m", "src"]
