Minor fixes for .env.example to simplify deployment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 WS_PORT=8765
-WORKCHAIN=0# or -1
-NETWORK=mainnet# or testnet or any other
+WORKCHAIN=0 # or -1
+NETWORK=mainnet # or testnet or any other
+ZERO_STATE_FILE_HASH=
